[package]
name = "rust-gui"
version = "0.1.1"
edition = "2021"
license-file = "LICENSE"
description = "This project is a wrapper of the c++ library Dear ImGui to implement a simple GUI fast."
repository = "https://github.com/AdrianDosch/Rust-GUI"
readme = "README.md"
documentation = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "2.2.0"
lazy_static = "1.4.0"
rust_gui_macros = {path = "./rust_gui_macros", version = "0.1.0"}
paste = "1.0.7"
tokio = {version = "1.18.0", features = ["sync"]}

[build-dependencies]
cc = "1.0.73"

[dev-dependencies]
walkdir = "2.3.2"
