[package]
name = "rust-gui"
version = "0.2.0"
edition = "2021"
license-file = "LICENSE"
description = "This project is a wrapper of the c++ library Dear ImGui to implement a simple GUI fast."
repository = "https://github.com/AdrianDosch/Rust-GUI"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.18.0", features = ["sync"]}

[build-dependencies]
cc = "1.0.73"

[dev-dependencies]
walkdir = "2.3.2"
