[package]
name = "rust_gui_macros"
version = "0.2.0"
edition = "2021"
description = "This project is a part of the library rust-gui."
repository = "https://github.com/AdrianDosch/Rust-GUI"
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0.91"
quote = "1.0.18"
proc-macro2 = "1.0.37"
